@@ -8,13 +8,13 @@
   <release platform="OS2" stability="stablesvn" version="1.3.3.14" />
   <release platform="MacOSX" stability="stablesvn" version="1.3.3.14" />
   <release platform="Win32" stability="stablesvn" version="1.3.3.14" />
-  <release platform="X11" stability="unstable" version="1.4.0.RC5" />
-  <release platform="Win32" stability="unstable" version="1.4.0.RC5" />
-  <release platform="MacOSX" stability="unstable" version="1.4.0.RC5" />
-  <release platform="OS2" stability="unstable" version="1.4.0.RC5" />
+  <release platform="X11" stability="unstable" version="1.4.0.RC6" />
+  <release platform="Win32" stability="unstable" version="1.4.0.RC6" />
+  <release platform="MacOSX" stability="unstable" version="1.4.0.RC6" />
+  <release platform="OS2" stability="unstable" version="1.4.0.RC6" />
   <release platform="X11" stability="unstablesvn" version="1.5.0.svn" />
   <release platform="Win32" stability="unstablesvn" version="1.5.0.svn" />
   <release platform="MacOSX" stability="unstablesvn" version="1.5.0.svn" />
   <release platform="OS2" stability="unstablesvn" version="1.5.0.svn" />
-  <message lang="en" > - Scribus 1.3.3.14 is the latest stable release.<![CDATA[<br>]]> - We have stabilised 1.3.3.x for those wishing to use some new features of the 1.3.x series but need more stability.<![CDATA[<br>]]> - Scribus 1.4.0.RC5 was released 18 June 2011 </message>
+  <message lang="en" > - Scribus 1.3.3.14 is the latest stable release.<![CDATA[<br>]]> - We have stabilised 1.3.3.x for those wishing to use some new features of the 1.3.x series but need more stability.<![CDATA[<br>]]> - Scribus 1.4.0.RC6 was released October 2011 </message>
 </scribus>
